--- a/RunTracker/RunTracker/Base.lproj/Main.storyboard
+++ b/RunTracker/RunTracker/Base.lproj/Main.storyboard
@@ -176,7 +176,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="PMa-GE-1aa">
-                                <rect key="frame" x="0.0" y="201" width="426.5" height="615"/>
+                                <rect key="frame" x="0.0" y="201" width="414" height="615"/>
                             </mapView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kx3-G1-mEs">
                                 <rect key="frame" x="92" y="95" width="251" height="72"/>
@@ -185,7 +185,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="GMM-pL-Zmy">
-                                <rect key="frame" x="47" y="165" width="332.5" height="27.5"/>
+                                <rect key="frame" x="47" y="165" width="320" height="27.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0,000 km" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SG0-sH-Haw">
                                         <rect key="frame" x="0.0" y="0.0" width="98.5" height="27.5"/>
@@ -197,7 +197,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0,0 min/km" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8So-fq-iTM">
-                                        <rect key="frame" x="113.5" y="0.0" width="114" height="27.5"/>
+                                        <rect key="frame" x="113.5" y="0.0" width="101.5" height="27.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="114" id="ETU-5G-ezx"/>
                                         </constraints>
@@ -206,7 +206,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 pasos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OqU-sv-a2q">
-                                        <rect key="frame" x="242.5" y="0.0" width="90" height="27.5"/>
+                                        <rect key="frame" x="230" y="0.0" width="90" height="27.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="90" id="Xme-Q1-qxx"/>
                                         </constraints>
@@ -234,6 +234,7 @@
                     <navigationItem key="navigationItem" id="ymh-gk-rfC"/>
                     <connections>
                         <outlet property="distanceLabel" destination="SG0-sH-Haw" id="lsa-bM-JeP"/>
+                        <outlet property="mapView" destination="PMa-GE-1aa" id="OCD-V5-OiY"/>
                         <outlet property="rateLabel" destination="8So-fq-iTM" id="6Mv-oh-JWr"/>
                         <outlet property="stepsLabel" destination="OqU-sv-a2q" id="fIn-gd-lzu"/>
                         <outlet property="timeLabel" destination="Kx3-G1-mEs" id="pYd-5L-F78"/>
@@ -251,8 +252,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Peso (Kg): " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9S4-mU-8Xf">
-                                <rect key="frame" x="20" y="450" width="131" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Peso (kg): " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9S4-mU-8Xf">
+                                <rect key="frame" x="20" y="450" width="127" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
